--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-dnd": "^3.0.2",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
